log
Fri Apr  8 15:08:47 UTC 2022: 
 tests:  0|6
total_score: 0/70
775719a
Fri Apr  8 15:22:43 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:16: error: subscripted value is neither array nor pointer nor vector
       createMap[capacity];
                ^
cc1: all warnings being treated as errors
Compilation failed
8959f94
Fri Apr  8 15:24:04 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:16: error: subscripted value is neither array nor pointer nor vector
       createMap[i]=0;
                ^
cc1: all warnings being treated as errors
Compilation failed
4998d92
Fri Apr  8 15:24:18 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:7: error: ‘arreglo’ undeclared (first use in this function)
       arreglo[i]=0;
       ^~~~~~~
hashmap.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
4022cf5
Fri Apr  8 15:24:56 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:7: error: ‘map’ undeclared (first use in this function); did you mean ‘fmal’?
       map[i]=0;
       ^~~
       fmal
hashmap.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
ad1eb74
Fri Apr  8 15:26:03 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:25: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   for(int i=0;i<capacity,i++)
                         ^
hashmap.c:56:29: error: expected ‘;’ before ‘)’ token
   for(int i=0;i<capacity,i++)
                             ^
hashmap.c:58:7: error: ‘map’ undeclared (first use in this function); did you mean ‘fmal’?
       map[i]=NULL;
       ^~~
       fmal
hashmap.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
32bc7b4
Fri Apr  8 15:33:53 UTC 2022: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘tabla’:
hashmap.c:55:27: error: expected declaration specifiers before ‘malloc’
   HashMap* tabla(HashMap*)malloc(sizeof(HashMap));
                           ^~~~~~
hashmap.c:57:3: error: expected declaration specifiers before ‘return’
   return NULL;
   ^~~~~~
hashmap.c:58:1: error: expected declaration specifiers before ‘}’ token
 }
 ^
hashmap.c:60:43: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void eraseMap(HashMap * map,  char * key) {
                                           ^
hashmap.c:65:46: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 Pair * searchMap(HashMap * map,  char * key) {
                                              ^
hashmap.c:71:32: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 Pair * firstMap(HashMap * map) {
                                ^
hashmap.c:76:31: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 Pair * nextMap(HashMap * map) {
                               ^
test.c:8:34: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 char * _strdup(const char * str) {
                                  ^
test.c:15:1: error: parameter ‘test_id’ is initialized
 int test_id = -1;
 ^~~
test.c:18:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int success(){
              ^
test.c:23:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void err_msg(char* msg){
                        ^
test.c:30:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void ok_msg(char* msg){
                       ^
test.c:36:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void info_msg(char* msg){
                         ^
test.c:41:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 HashMap* initializeMap(){
                         ^
test.c:64:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int createMap_test1(){ //Retorna el mapa
                      ^
test.c:75:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int createMap_test2(){ //Buckets nulos
                      ^
test.c:83:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int createMap_test3(){ //variables
                      ^
test.c:100:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void hash_test1(){ // posición válida
                  ^
test.c:111:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void hash_test2(){ // colisiones
                  ^
test.c:125:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void hash_test3(){ //no random
                  ^
test.c:131:20: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void compare_test(){
                    ^
test.c:138:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int insert_test1(){ //elemento con hash=3
                   ^
test.c:168:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int insert_test2(){ //no se agregan repetidos
                   ^
test.c:179:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int insert_test3(){ //colisión
                   ^
test.c:192:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int insert_test4(){ //colisión
                   ^
test.c:217:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
                   ^
test.c:233:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int search_test1(){ //busqueda de elemento insertado
                   ^
test.c:256:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int search_test2(){ //busqueda de elemento colisionado
                   ^
test.c:276:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int search_test3(){ //busqueda de elemento que no existe
                   ^
test.c:289:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int erase_test1(){  //elimina dato
                  ^
test.c:314:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int erase_test2(){  //elimina dato colisionado
                  ^
test.c:330:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int erase_test3(){  //elimina dato que no existe
                  ^
test.c:345:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int first_test(){
                 ^
test.c:389:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int next_test(){
                ^
test.c:425:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int enlarge_test(){
                   ^
test.c:453:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int main( int argc, char *argv[] ) {
                                    ^
In file included from test.c:4:0:
hashmap.c:55:12: error: old-style parameter declarations in prototyped function definition
   HashMap* tabla(HashMap*)malloc(sizeof(HashMap));
            ^~~~~
hashmap.c:55:3: error: parameter name omitted
   HashMap* tabla(HashMap*)malloc(sizeof(HashMap));
   ^~~~~~~
test.c:511:1: error: expected ‘{’ at end of input
 }
 ^
test.c:511:1: error: no return statement in function returning non-void [-Werror=return-type]
test.c: In function ‘createMap’:
test.c:511:1: error: expected declaration or statement at end of input
test.c:511:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
In file included from test.c:4:0:
At top level:
hashmap.c:55:12: error: ‘tabla’ defined but not used [-Werror=unused-function]
   HashMap* tabla(HashMap*)malloc(sizeof(HashMap));
            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
67e2678
